remove elasticsearch from the project