@@ -3,9 +3,7 @@ package hu.progmasters.circlesapp.service;
 import hu.progmasters.circlesapp.domain.AppUser;
 import hu.progmasters.circlesapp.domain.Group;
 import hu.progmasters.circlesapp.dto.incoming.GroupCreationCommand;
-import hu.progmasters.circlesapp.dto.outgoing.GroupListItem;
-import hu.progmasters.circlesapp.dto.outgoing.JoinedGroupList;
-import hu.progmasters.circlesapp.dto.outgoing.NotJoinedGroupList;
+import hu.progmasters.circlesapp.dto.outgoing.*;
 import hu.progmasters.circlesapp.repository.GroupRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
@@ -15,6 +13,8 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -23,10 +23,12 @@ public class GroupService {
     private final GroupRepository groupRepository;
     private final AppUserService appUserService;
 
+
     @Autowired
     public GroupService(GroupRepository groupRepository, AppUserService appUserService) {
         this.groupRepository = groupRepository;
         this.appUserService = appUserService;
+
     }
 
     public Group createGroup(GroupCreationCommand command, String username) {
@@ -34,16 +36,21 @@ public class GroupService {
         Group group = groupRepository.save(new Group(command, appUser));
         group.setOwner(appUser);
         appUser.addGroup(group);
+
         return group;
     }
 
     public JoinedGroupList getJoinedGroups(String username, Integer page) {
-       AppUser user = appUserService.findUserByUsername(username);
-        Pageable pageable = PageRequest.of(page, 7);
+        AppUser user = appUserService.findUserByUsername(username);
+        int pagesToLoad = 7;
+        if (page > 0) {
+            pagesToLoad = 8;
+        }
+        Pageable pageable = PageRequest.of(page, pagesToLoad);
         Page<Group> currentPage = groupRepository.findGroupsJoinedByUser(user, pageable);
         List<GroupListItem> groups = currentPage.stream()
                 .map(group -> new GroupListItem(user, group))
-                .toList();
+                .collect(Collectors.toList());
         return new JoinedGroupList(currentPage.getTotalPages(), groups);
     }
 
@@ -58,4 +65,47 @@ public class GroupService {
     }
 
 
+//    public GroupSearchList search(String keywords) {
+//        Query query = MatchQuery.of(m ->
+//                        m.field("name")
+//                                .query(keywords)
+//                                .operator(Operator.And)
+//                                .fuzziness("AUTO")
+//                                .boost(null))
+//                ._toQuery();
+//
+//        NativeQuery nativeQuery = NativeQuery.builder().withQuery(query).build();
+//
+//        SearchHits<GroupSearch> result =
+//                this.elasticsearchOperations.search(nativeQuery, GroupSearch.class);
+//
+//        List<GroupSearchListItem> groupSearchListItems = result.stream()
+//                .map(SearchHit::getContent)
+//                .map(GroupSearchListItem::new)
+//                .toList();
+//
+//        return new GroupSearchList(groupSearchListItems);
+//    }
+
+    public Optional<GroupDetailsItem> getGroupDetails(Long id) {
+        Optional<Group> optionalGroup = groupRepository.findById(id);
+
+        return optionalGroup.map(GroupDetailsItem::new);
+    }
+
+    public Group joinGroup(Long groupId, String username) {
+        Group group = null;
+        AppUser user = appUserService.findUserByUsername(username);
+        Optional<Group> optionalGroup = findGroupById(groupId);
+        if (optionalGroup.isPresent()) {
+            group = optionalGroup.get();
+            group.addUser(user);
+            return group;
+        }
+        return group;
+    }
+
+    private Optional<Group> findGroupById(Long groupId) {
+        return groupRepository.findById(groupId);
+    }
 }
